--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,29 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebSocket Chat</title>
+    <title>Asistent pri razikovanju avtomobiljskih zavarovanj</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             max-width: 800px;
-            margin: 20px auto;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #8b0000;
+            color: white;
+        }
+        h1 {
+            color: white;
+            text-align: center;
+            margin-bottom: 10px;
+            font-size: 24px;
+        }
+        .description {
+            text-align: center;
+            color: white;
+            margin-bottom: 30px;
             padding: 0 20px;
+            line-height: 1.5;
         }
         #messageArea {
             height: 400px;
-            border: 1px solid #ccc;
+            border: 1px solid #ff9999;
             margin-bottom: 20px;
             padding: 10px;
             overflow-y: auto;
-            background: #f9f9f9;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        .input-container {
+            display: flex;
+            gap: 10px;
+            align-items: center;
         }
         #messageInput {
-            width: calc(100% - 100px);
-            padding: 8px;
-            margin-right: 10px;
+            flex: 1;
+            padding: 12px;
+            border: none;
+            border-radius: 4px;
+            background: white;
+        }
+        button {
+            padding: 12px 20px;
+            background: white;
+            color: #8b0000;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-weight: bold;
+            transition: background-color 0.3s;
+            white-space: nowrap;
+        }
+        button:hover {
+            background-color: #f8f8f8;
         }
         .error {
-            color: red;
+            color: #ff0000;
             font-weight: bold;
         }
         .system {
@@ -36,45 +74,54 @@
             margin: 5px 0;
             padding: 5px;
             border-radius: 4px;
+            color: black;
         }
         .user-message {
             background-color: #e3f2fd;
             margin-left: 20px;
             padding: 8px;
             border-radius: 8px;
+            color: black;
         }
         .agent-message {
             background-color: #f5f5f5;
             margin-right: 20px;
             padding: 8px;
             border-radius: 8px;
+            color: black;
         }
         .sender-label {
             font-weight: bold;
             margin-bottom: 4px;
+            color: black;
         }
         #connectionStatus {
-            margin-bottom: 10px;
+            margin-bottom: 20px;
             padding: 10px;
             border-radius: 4px;
+            text-align: center;
         }
         .connected {
-            background-color: #d4edda;
-            color: #155724;
+            background-color: #006400;
+            color: white;
         }
         .disconnected {
-            background-color: #f8d7da;
-            color: #721c24;
+            background-color: #8b0000;
+            color: white;
+            border: 1px solid white;
         }
     </style>
 </head>
 <body>
-    <h1>WebSocket Chat</h1>
+    <h1>Asistent pri razikovanju avtomobiljskih zavarovanj</h1>
+    <div class="description">
+        To je demo asistent za avtomobiljska zavarovanja, ima javne podatke o zavarovanjih in s pomočjo teh svetuje zavarovancem o paketih in pojasni krtja posameznih zavarovanj
+    </div>
     <div id="connectionStatus"></div>
     <div id="messageArea"></div>
-    <div>
-        <input type="text" id="messageInput" placeholder="Type your message..." />
-        <button onclick="sendMessage()">Send</button>
+    <div class="input-container">
+        <input type="text" id="messageInput" placeholder="Vnesite svoje sporočilo..." />
+        <button onclick="sendMessage()">Pošlji</button>
     </div>
 
     <script>
