--- a/frontend/index.html
+++ b/frontend/index.html
@@ -113,9 +113,9 @@
     </style>
 </head>
 <body>
-    <h1>Asistent pri razikovanju avtomobiljskih zavarovanj</h1>
+    <h1>Asistent pri raziskovanju avtomobilskih zavarovanj</h1>
     <div class="description">
-        To je demo asistent za avtomobiljska zavarovanja, ima javne podatke o zavarovanjih in s pomočjo teh svetuje zavarovancem o paketih in pojasni krtja posameznih zavarovanj
+        Ta demo asistent za avtomobilska zavarovanja uporablja javne podatke za svetovanje o zavarovalnih paketih in pojasnjevanje kritij posameznih vrst zavarovanj.
     </div>
     <div id="connectionStatus"></div>
     <div id="messageArea"></div>
