--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asistent pri razikovanju avtomobiljskih zavarovanj</title>
+    <title>Hugo-Triglavan</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -225,7 +225,6 @@
                 sendMessage();
             }
         });
-        
         // Initial connection
         connect();
     </script>
